@@ -2822,6 +2822,8 @@ In the latter case you can also use a link, for example [[{{#Special:Export}}/{{
 'export-submit'     => 'Export',
 'export-addcattext' => 'Add pages from category:',
 'export-addcat'     => 'Add',
+'export-addnstext' => 'Add pages from namespace:',
+'export-addns'     => 'Add',
 'export-download'   => 'Save as file',
 'export-templates'  => 'Include templates',
 'export-pagelinks'  => 'Include linked pages to a depth of:',
